...
final class TrendingViewController: UIViewController {
    
    //MARK: - Constants
    
    private enum Constants {
        static let trendingTitleText = "В тренде"
        static let popularTitleText = "Популярное"
        static let cellInsets = UIEdgeInsets(top: 5, left: 5, bottom: 5, right: 5)
        static let numberOfCellInRow: CGFloat = 3
        static let paginationOffset = 9
        static let errorDescriptionFont = UIFont.systemFont(ofSize: 20, weight: .thin)
        static let defaultErrorText = "Что-то пошло не так..."
    }
...
