...
        static let taglineFont = UIFont.systemFont(ofSize: 14, weight: .semibold)
        static let genresFont = UIFont.systemFont(ofSize: 12, weight: .thin)
        static let countriesRuntimeFont = UIFont.systemFont(ofSize: 12, weight: .thin)
        static let overviewFont = UIFont.systemFont(ofSize: 16)
        static let errorDescriptionFont = UIFont.systemFont(ofSize: 18, weight: .thin)
        static let defaultErrorText = "Что-то пошло не так..."
        static let addToFavoriteButtonTitle = "В избранное"
    }
    
    //MARK: - Properties
    
    var interactor: DetailsInteractorInput?
    
...
